[flake8]
exclude = .venv
ignore = E203,W503
max-line-length = 88

[isort]
profile = black

[metadata]
license_files = LICENSE

[mypy]
disallow_incomplete_defs = False
disallow_untyped_calls = False
disallow_untyped_decorators = False
disallow_untyped_defs = False
no_implicit_optional = True
pretty = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True
